objects/LBI__LatticeTab__c.object
<CustomObject>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Tabs</relationshipLabel>
        <relationshipName>LatticeTabs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__SupplementalInformationDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplemental Information Definition</label>
        <referenceTo>LBI__SupplementalInformationDefinition__c</referenceTo>
        <relationshipLabel>Lattice Tabs</relationshipLabel>
        <relationshipName>LatticeTabs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recommendation Information</fullName>
                </value>
                <value>
                    <fullName>Buying Signals</fullName>
                </value>
                <value>
                    <fullName>Talking Points</fullName>
                </value>
                <value>
                    <fullName>Purchase History</fullName>
                </value>
                <value>
                    <fullName>Company Profile</fullName>
                </value>
                <value>
                    <fullName>Supplemental Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Tab</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lattice Tabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>